--- a/Paqure/Base.lproj/Main.storyboard
+++ b/Paqure/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Qj-4J-c7Z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="0Qj-4J-c7Z">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -101,11 +101,158 @@
                         <outlet property="messageLabel" destination="IZP-4n-gQm" id="M39-HM-PQt"/>
                         <outlet property="nameLabel" destination="8X0-vO-VLU" id="Suo-1M-SlM"/>
                         <outlet property="versionLabel" destination="TMJ-oW-RJ2" id="Sit-4F-N3q"/>
+                        <segue destination="POj-8q-SOK" kind="show" identifier="showDevice" id="ilh-C2-Snm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="67n-gF-EuH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="181" y="469"/>
+        </scene>
+        <!--device_settings-->
+        <scene sceneID="xfZ-N0-eUr">
+            <objects>
+                <viewController storyboardIdentifier="device" title="device_settings" useStoryboardIdentifierAsRestorationIdentifier="YES" id="POj-8q-SOK" customClass="DeviceController" customModule="Paqure" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MBh-aC-vWp"/>
+                        <viewControllerLayoutGuide type="bottom" id="lQc-uu-i8J"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iRL-3z-dpd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Hky-nF-Deu">
+                                <rect key="frame" x="150" y="136" width="300" height="327"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="label" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pYO-VC-rPR">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="PLP-wa-MFw"/>
+                                            <constraint firstAttribute="height" constant="36" id="WbO-I0-M10"/>
+                                        </constraints>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" keyboardAppearance="alert" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="id" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GwD-le-Cg8">
+                                        <rect key="frame" x="0.0" y="36" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Q5l-YJ-MXi"/>
+                                            <constraint firstAttribute="width" constant="300" id="lUu-dE-CHE"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="identifier" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WLT-eU-le1">
+                                        <rect key="frame" x="0.0" y="66" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Ruq-q7-nly"/>
+                                            <constraint firstAttribute="width" constant="300" id="wxi-JL-61s"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="locale" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYS-Xj-7DJ">
+                                        <rect key="frame" x="0.0" y="96" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="4qI-26-tnh"/>
+                                            <constraint firstAttribute="width" constant="300" id="kTV-1x-Fih"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="token" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qa-bT-Uj1">
+                                        <rect key="frame" x="0.0" y="126" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="bhm-sQ-kNT"/>
+                                            <constraint firstAttribute="height" constant="30" id="nx1-lT-R5S"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HeE-8L-E1e">
+                                        <rect key="frame" x="0.0" y="156" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="3uk-hL-tok"/>
+                                            <constraint firstAttribute="width" constant="300" id="yoE-4n-Idr"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="modified" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gxD-kb-kGc">
+                                        <rect key="frame" x="0.0" y="186" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="FHC-Ye-ARp"/>
+                                            <constraint firstAttribute="width" constant="300" id="UlV-8f-OF9"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="status" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdr-9M-rOo">
+                                        <rect key="frame" x="0.0" y="216" width="300" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="VRK-ss-v8F"/>
+                                            <constraint firstAttribute="width" constant="300" id="jSE-tk-fMb"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THg-tV-Jym">
+                                        <rect key="frame" x="0.0" y="246" width="300" height="36"/>
+                                        <color key="backgroundColor" red="0.22230920200000001" green="0.59495002029999999" blue="0.98936182260000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="89q-iO-Udh"/>
+                                            <constraint firstAttribute="height" constant="36" id="Vil-iW-oRP"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="didTouchContinue:" destination="0Qj-4J-c7Z" eventType="touchUpInside" id="hvv-0T-HPH"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="status" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mfx-nf-No5">
+                                        <rect key="frame" x="0.0" y="282" width="300" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="Tkv-nm-EoP"/>
+                                            <constraint firstAttribute="height" constant="45" id="tQ4-ca-coA"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Hky-nF-Deu" firstAttribute="centerY" secondItem="iRL-3z-dpd" secondAttribute="centerY" id="OSd-iF-8kb"/>
+                            <constraint firstItem="Hky-nF-Deu" firstAttribute="centerX" secondItem="iRL-3z-dpd" secondAttribute="centerX" id="m1H-GP-pGF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="createdLabel" destination="HeE-8L-E1e" id="6zo-1K-GzL"/>
+                        <outlet property="idLabel" destination="GwD-le-Cg8" id="i42-7l-xDt"/>
+                        <outlet property="identifierLabel" destination="WLT-eU-le1" id="n8L-v7-5k7"/>
+                        <outlet property="labelLabel" destination="pYO-VC-rPR" id="JxW-mn-YOC"/>
+                        <outlet property="localeLabel" destination="eYS-Xj-7DJ" id="dN1-7u-B0m"/>
+                        <outlet property="messageLabel" destination="mfx-nf-No5" id="st7-PH-rW0"/>
+                        <outlet property="modifiedLabel" destination="gxD-kb-kGc" id="Y4U-Nk-31w"/>
+                        <outlet property="statusLabel" destination="xdr-9M-rOo" id="GrM-Is-1lg"/>
+                        <outlet property="tokenLabel" destination="7qa-bT-Uj1" id="MJT-Rm-aGs"/>
+                        <outlet property="updateButton" destination="THg-tV-Jym" id="ual-60-dJ2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GTT-0i-KRy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="847" y="469"/>
         </scene>
     </scenes>
 </document>
